# pdf-mode

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
benchmarks/: CMakeLists.txt  bridge_benchmarks.cpp
include/: assume.hpp  bridge.hpp  expected.hpp  likely.hpp  overload.hpp  pdf.hpp  requires.hpp  unreachable.hpp  viewer.hpp  void.hpp
lisp/: yapdf-view.el
src/: bridge.cpp  lib.cpp  pdf.cpp  pdf.hpp  unreachable.cpp  viewer.cpp
tests/: CMakeLists.txt  bridge_test.cpp  bridge_tests.cpp  expected_tests.cpp
